--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<style> p {text-indent: 60px} </style>
 </head>
 <body>
+	<nav>
+        <ul>
+            <li><a href="https://Reihannabil.github.io/index.html"> HOME </a></li>
+     
+            <li><a href="https://Reihannabil.github.io/galeri.html"> GALERI </a></li>
+        </ul>
+    </nav>
 		<div class="background">
 		<div class="isi">
 	<h1 style="text-align: center;"><b>Pengalaman Pembelajaran Jarak Jauh selama Pandemi Covid-19</b></h1>
