--- a/galeri.html
+++ b/galeri.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Galeri Reihannabil</title>
-        <link rel="stylesheet" href="https://Reihannabil.github.io/HTML & CSS pertemuan 4.css"/>
+        <link rel="stylesheet" href="https://Reihannabil.github.io/style.css"/>
         <style>
             .container {
 			max-width: 1200px;
