--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<p><h2><b>BIODATA PENULIS</b></h2></p>
 	<table>
 			<table id="b01" style="width: 60%" align="center">
-			<img src="aku.jpeg" alt="Reihannabil" width="150" height="150" style="float: center;">
+			<img src="https://github.com/Reihannabil/Reihannabil.github.io/blob/main/Aku.jpeg?raw=true" alt="Reihannabil" width="150" height="150" style="float: center;">
 		<tr>
 			<td>Nama</td>
 			<td>:</td> 
